Add possible value filters, revert unselect of hint list view -> not working properly yet.