@@ -5,10 +5,13 @@ plugins {
 
 javafx {
     version = "11.0.2"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.graphics' ]
 }
 
-mainClassName = 'sudoku.desktop/org.netomi.sudoku.ui.SudokuApp'
+application {
+    applicationDefaultJvmArgs = ["--add-opens=javafx.graphics/javafx.scene=tornadofx"]
+    mainClassName = 'sudoku.desktop/org.netomi.sudoku.ui.SudokuApp'
+}
 
 jar {
     manifest {
